add list elements

--- a/my-first-website.html
+++ b/my-first-website.html
@@ -3,3 +3,11 @@
 
 <p>This is my first web page!</p>
 <p>Isnt it nice?</p>
+
+<p>Here are some things I am going to learn about coding:</p>
+<ul>
+  <li>HTML</li>
+  <li>CSS</li>
+  <li>javascript</li>
+  <li>and a lot more</li>
+</ul>
