--- a/my-first-website.html
+++ b/my-first-website.html
@@ -1,13 +1,22 @@
-<h1>My first web page</h1>
-<h2>Written with the guidence of epicodus</h2>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Web Page #1</title>
+  </head>
+  <body>
 
-<p>This is my first web page!</p>
-<p>Isnt it nice?</p>
+    <h1>My first web page</h1>
+    <h2>Written with the guidence of epicodus</h2>
 
-<p>Here are some things I am going to learn about coding:</p>
-<ul>
-  <li>HTML</li>
-  <li>CSS</li>
-  <li>javascript</li>
-  <li>and a lot more</li>
-</ul>
+    <p>This is my first web page!</p>
+    <p>Isnt it nice?</p>
+
+    <p>Here are some things I am going to learn about coding:</p>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+      <li>javascript</li>
+      <li>and a lot more</li>
+    </ul>
+  </body>
+</html>
